# indy-vdr

wrappers/javascript/indy-vdr-react-native/android/: CMakeLists.txt  build.gradle
